ex6: solution part 4