@@ -1,6 +1,7 @@
 package com.realdolmen.refactoring.ex6;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.*;
 import static java.util.stream.Stream.concat;
@@ -12,15 +13,11 @@ public class Grouper {
         this.consonantCounter = consonantCounter;
     }
 
-    public Map<Integer, List<String>> groupByAmountOfUniqueConsonants(List<String> words){
-        Map<Integer, List<String>> wordsByAmountOfUniqueCharacters = new HashMap<>();
-        for (String word : words) {
-            int u = consonantCounter.countUniqueCharacters(word);
-            wordsByAmountOfUniqueCharacters.merge(u, List.of(word), (origWords, newWords)
-                -> concat(origWords.stream(), newWords.stream()).collect(toList()));
-        }
-
-        return wordsByAmountOfUniqueCharacters;
+    public Map<Integer, List<String>> groupByAmountOfUniqueConsonants(List<String> words) {
+        return words.stream()
+            .collect(Collectors.toMap(
+                consonantCounter::countUniqueCharacters, List::of,
+                (w1, w2) -> concat(w1.stream(), w2.stream()).toList()));
     }
 
 }
